--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,9 @@
-
+#NGINX CONF CUSTOM
 #user  nobody;
 worker_processes  1;
+master_process off;
+daemon off;
+
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
 #error_log  logs/error.log  info;
@@ -16,6 +19,13 @@ events {
 http {
     include       mime.types;
     default_type  application/octet-stream;
+
+
+    upstream backend {
+	truc;
+	server google.com;
+    server example.org;
+    }
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                  '$status $body_bytes_sent "$http_referer" '
@@ -34,12 +44,12 @@ http {
     server {
         listen       8080;
         server_name  localhost;
-
         #charset koi8-r;
 
         #access_log  logs/host.access.log  main;
 
         location / {
+	    proxy_pass http://backend;
             root   html;
             index  index.html index.htm;
         }
